# pointcloud_sampler

./: .travis.yml  CMakeLists.txt  README.md  package.xml
config/: ground_params.yaml  parameters.yaml
launch/: ground_filter.launch  sampler.launch
src/: remove_ground.cpp  sampler.cpp
